--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
         "tailwindcss": "^3.0.0",
         "vue": "^3.2.31",
         "vue-loader": "^17.0.0"
+    },
+    "dependencies": {
+        "filepond": "^4.30.3",
+        "filepond-plugin-file-validate-type": "^1.2.8",
+        "vue-filepond": "^7.0.3"
     }
 }
