display and delete files

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "filepond": "^4.30.3",
         "filepond-plugin-file-validate-type": "^1.2.8",
+        "moment": "^2.29.3",
         "vue-filepond": "^7.0.3"
     }
 }
