--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "league/flysystem-aws-s3-v3": "^3.0",
+        "spatie/laravel-fractal": "^6.0",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
